--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ AAPL_ML_model/X_test.npy
 AAPL_ML_model/y_test.npy
 AAPL_ML_model/X_train.npy
 AAPL_ML_model/y_train.npy
+AAPL_ML_model/config.py
+real_time_data/config.py
