updated to hide config.py

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ AAPL_ML_model/y_test.npy
 AAPL_ML_model/X_train.npy
 AAPL_ML_model/y_train.npy
 AAPL_ML_model/config.py
-real_time_data/config.py
+real_time_data/alpaca_config.py
